# VeriMeet

./: .gitignore  ENV_EXAMPLE.md  FRONTEND_SETUP.md  FRONTEND_SUMMARY.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  SETUP.md  agent.py  context.md  pyproject.toml  readme.md  requirements.txt  server.py  test_implementation.py
core/: __init__.py  config.py  fact_checker.py  intent_parser.py  summarizer.py  utils.py
frontend/: README.md  package-lock.json  package.json
frontend/components/: CreateBotForm.tsx  Layout.tsx  MeetingDashboard.tsx
frontend/lib/: api.ts  websocket.ts
frontend/pages/: _app.tsx  index.tsx  meetings.tsx  settings.tsx
mcp/: __init__.py  calendar_mcp.py  gmail_mcp.py  meetstream_mcp.py  notion_mcp.py  web_search_mcp.py
