[project]
name = "verimeet"
version = "0.1.0"
description = "AI meeting copilot with fact-checking and Notion integration"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "openai>=1.3.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

